@@ -99,7 +99,9 @@ extern  void                    nwamui_ncp_foreach_ncu( NwamuiNcp *self, GtkTree
 
 extern void                     nwamui_ncp_populate_ncu_list( NwamuiNcp* self, GObject* _daemon );
 
-extern void                     nwamui_ncp_remove_ncu( NwamuiNcp* self, const gchar* device_name );
+extern void                     nwamui_ncp_remove_ncu_by_device_name( NwamuiNcp* self, const gchar* device_name );
+
+extern void                     nwamui_ncp_remove_ncu( NwamuiNcp* self, NwamuiNcu* ncu );
 
 extern void                     nwamui_ncp_set_manual_ncu_selection( NwamuiNcp *self, NwamuiNcu *ncu);
 
